Adding CarrierWave/ActiveRecord model for EasyML::Model

--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -1,3 +1,8 @@
+# test:
+#   adapter:  sqlite3
+#   database: db/easy_ml_test.sqlite
+
+
 test:
-  adapter:  sqlite3
-  database: db/easy_ml_test.sqlite
+  adapter: postgresql
+  database: easy_ml_test
