--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -5,3 +5,11 @@ test:
   port: 5432
   pool: 5
   timeout: 5000
+
+development:
+  adapter: postgresql
+  database: easy_ml_test
+  host: localhost
+  port: 5432
+  pool: 5
+  timeout: 5000
