--- a/package.json
+++ b/package.json
@@ -18,7 +18,28 @@
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.6.3",
         "vite": "^5.0.0",
-        "vite-plugin-ruby": "^5.1.0"
+        "vite-plugin-ruby": "^5.1.0",
+        "@radix-ui/react-collapsible": "^1.0.3",
+        "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "fuse.js": "^7.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.9.1",
+        "@types/react": "^18.3.5",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.18",
+        "eslint": "^9.9.1",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "^0.4.11",
+        "globals": "^15.9.0",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.5.3",
+        "typescript-eslint": "^8.3.0",
+        "vite": "^5.4.2"
     },
     "scripts": {
         "dev": "vite",
