Not working, try something else

--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
     "name": "easy_ml",
     "private": true,
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.0.0",
+        "@radix-ui/react-collapsible": "^1.0.3",
+        "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "fuse.js": "^7.0.0",
         "lucide-react": "^0.294.0",
         "postcss": "^8.4.47",
         "react": "^18.2.0",
@@ -18,12 +25,7 @@
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.6.3",
         "vite": "^5.0.0",
-        "vite-plugin-ruby": "^5.1.0",
-        "@radix-ui/react-collapsible": "^1.0.3",
-        "@radix-ui/react-scroll-area": "^1.0.5",
-        "@radix-ui/react-separator": "^1.0.3",
-        "@radix-ui/react-slot": "^1.0.2",
-        "fuse.js": "^7.0.0"
+        "vite-plugin-ruby": "^5.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
