--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "tailwindcss": "^3.4.14",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.6.3",
+        "use-inertia-form": "^4.3.1",
         "vite": "^5.0.0",
         "vite-plugin-ruby": "^5.1.0"
     },
