--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
         "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.0",
-        "clsx": "^2.0.0",
+        "clsx": "^2.1.1",
         "fuse.js": "^7.0.0",
-        "lucide-react": "^0.294.0",
+        "lucide-react": "^0.454.0",
         "postcss": "^8.4.47",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwind-merge": "^2.1.0",
+        "shadcn": "^2.1.5",
+        "tailwind-merge": "^2.5.4",
         "tailwindcss": "^3.4.14",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.6.3",
@@ -30,6 +31,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
+        "@types/node": "^22.8.7",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
