--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
         "tailwindcss": "^3.4.14",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.6.3",
-        "use-inertia-form": "^4.3.1",
-        "vite": "^5.0.0",
-        "vite-plugin-ruby": "^5.1.0"
+        "use-inertia-form": "^4.3.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
@@ -44,7 +42,8 @@
         "tailwindcss": "^3.4.1",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.3.0",
-        "vite": "^5.4.2"
+        "vite": "^5.4.11",
+        "vite-plugin-ruby": "^5.1.1"
     },
     "scripts": {
         "dev": "vite",
