--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ x-app: &default-app
   stop_grace_period: 3s
   tty: true
   volumes:
-    - ./public:/app/public
-    - ./easy_ml:/app/easy_ml
+    - .:/app
   environment:
     RAILS_ENV: ${RAILS_ENV}
     SECRET_KEY_BASE: "${SECRET_KEY_BASE}" # Pass from host environment or .env file
@@ -30,20 +29,13 @@ services:
       start_period: 5s
       retries: 3
     ports:
-      - "3000:3000" # Map container's port 3000 to host's port 3000
+      - "9999:3000" # Map host's port 9999 to container's port 3000
     profiles: ["web"]
 
   worker:
     <<: *default-app
-    command: "bundle exec rake resque:work COUNT=5 QUEUE=easy_ml"
+    command: "bundle exec rake resque:work QUEUE=easy_ml"
     entrypoint: []
     profiles: ["worker"]
     deploy:
       replicas: 5
-
-  resque-web:
-    <<: *default-app
-    command: "bundle exec resque-web -F"
-    ports:
-      - "5678:5678"
-    profiles: ["resque-web"]
