--- a/public/easy_ml/assets/.vite/manifest.json
+++ b/public/easy_ml/assets/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "entrypoints/Application.tsx": {
-    "file": "assets/entrypoints/Application.tsx-GDgZ4vVt.js",
+    "file": "assets/entrypoints/Application.tsx-BRRjHz4-.js",
     "name": "entrypoints/Application.tsx",
     "src": "entrypoints/Application.tsx",
     "isEntry": true,
     "css": [
-      "assets/Application-tsa3Id3n.css"
+      "assets/Application-Cu7lNJmG.css"
     ]
   }
 }
