--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "fs-extra": "^11.2.0",
         "fuse.js": "^7.0.0",
         "lucide-react": "^0.454.0",
         "postcss": "^8.4.47",
@@ -25,7 +26,8 @@
         "tailwindcss": "^3.4.14",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.6.3",
-        "use-inertia-form": "^4.3.1"
+        "use-inertia-form": "^4.3.1",
+        "vite-plugin-clean": "^1.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
