Remove access keys from the UI, pass in via AWS Secrets

--- a/public/easy_ml/assets/.vite/manifest.json
+++ b/public/easy_ml/assets/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "entrypoints/Application.tsx": {
-    "file": "assets/entrypoints/Application.tsx-DF5SSkYi.js",
+    "file": "assets/entrypoints/Application.tsx-jPsqOyb0.js",
     "name": "entrypoints/Application.tsx",
     "src": "entrypoints/Application.tsx",
     "isEntry": true,
     "css": [
-      "assets/Application-Cu7lNJmG.css"
+      "assets/Application-zpGA_Q9c.css"
     ]
   }
 }
