--- a/public/easy_ml/assets/.vite/manifest.json
+++ b/public/easy_ml/assets/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "entrypoints/Application.tsx": {
-    "file": "assets/entrypoints/Application.tsx-BWHK2hEi.js",
+    "file": "assets/entrypoints/Application.tsx-5FT8OvRh.js",
     "name": "entrypoints/Application.tsx",
     "src": "entrypoints/Application.tsx",
     "isEntry": true,
     "css": [
-      "assets/Application-D6L0eW4P.css"
+      "assets/Application-BUsRR6b6.css"
     ]
   }
 }
