--- a/public/easy_ml/assets/.vite/manifest.json
+++ b/public/easy_ml/assets/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "entrypoints/Application.tsx": {
-    "file": "assets/entrypoints/Application.tsx-qlinJAmw.js",
+    "file": "assets/entrypoints/Application.tsx-BJfRnuy7.js",
     "name": "entrypoints/Application.tsx",
     "src": "entrypoints/Application.tsx",
     "isEntry": true,
     "css": [
-      "assets/Application-B3sRjyMT.css"
+      "assets/Application-Q7L6ioxr.css"
     ]
   }
 }
