--- a/public/easy_ml/assets/.vite/manifest.json
+++ b/public/easy_ml/assets/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "entrypoints/Application.tsx": {
-    "file": "assets/entrypoints/Application.tsx-BvXmfcYk.js",
+    "file": "assets/entrypoints/Application.tsx-KENNRQpC.js",
     "name": "entrypoints/Application.tsx",
     "src": "entrypoints/Application.tsx",
     "isEntry": true,
     "css": [
-      "assets/Application-D5SxIZut.css"
+      "assets/Application-DfPoyRr8.css"
     ]
   }
 }
