--- a/public/easy_ml/assets/.vite/manifest.json
+++ b/public/easy_ml/assets/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "entrypoints/Application.tsx": {
-    "file": "assets/entrypoints/Application.tsx-CRS5bRgw.js",
+    "file": "assets/entrypoints/Application.tsx-gkZ77wo8.js",
     "name": "entrypoints/Application.tsx",
     "src": "entrypoints/Application.tsx",
     "isEntry": true,
